--- a/extras/_assets/sass/_alan.scss
+++ b/extras/_assets/sass/_alan.scss
@@ -1,4 +1,4 @@
-//  v1.0.0 (2018-12-16) by Tristano Ajmone
+//  v1.1.0 (2018/12/24) by Tristano Ajmone
 // *****************************************************************************
 // *                                                                           *
 // *                            Alan Syntax Theme                              *
@@ -20,7 +20,7 @@ $HL-Escape:             $Eighties-09; // Atomic Tangerine ( orange )
 $HL-Interpolation:      $Eighties-0F; // Raw Sienna ( brownish )
 $HL-String:             $Eighties-0B; // Moss Green
 $HL-Comment:            $Eighties-04; // Lemon Grass ( mid grayish )
-$HL-Operator:           $HL-Default; // Timberwolf ( gray )
+$HL-Operator:           $HL-Default;  // Timberwolf ( gray )
 $HL-Keywords1:          $Eighties-08; // Froly ( red )
 $HL-Keywords2:          $Eighties-0A; // Golden Tainoi ( yellow )
 $HL-Keywords3:          $Eighties-0D; // Danube ( blue )
@@ -28,6 +28,11 @@ $HL-Keywords3:          $Eighties-0D; // Danube ( blue )
 // -----------------------------------------------------------------------------
 /* Highlight Theme for Alan */
 // -----------------------------------------------------------------------------
+.listingblock code[data-lang]::before{
+    // Color of language name (shown when hovering)
+    color: $Eighties-05;
+}
+
 .listingblock pre[class=highlight][lang=alan] {
     background-color: $HL-CanvasBG;
     &>code {
@@ -66,7 +71,7 @@ $HL-Keywords3:          $Eighties-0D; // Danube ( blue )
         }
         &.str {
             // Strings
-            // ----------------------------
+            // -------
             color: $HL-String;
         }
         &.slc {
