--- a/extras/_assets/sass/_default-theme.scss
+++ b/extras/_assets/sass/_default-theme.scss
@@ -1,4 +1,4 @@
-//  v1.0.0 (2018-10-05) by Tristano Ajmone
+//  v1.1.0 (2018/12/24) by Tristano Ajmone
 // *****************************************************************************
 // *                                                                           *
 // *                         Highlight Default Theme                           *
@@ -35,6 +35,11 @@ $HL-Keywords6:          $Google-0F; // Royal Blue
 // -----------------------------------------------------------------------------
 /* Highlight Default Theme */
 // -----------------------------------------------------------------------------
+.listingblock code[data-lang]::before{
+    // Color of language name (shown when hovering)
+    color: $Google-04;
+}
+
 .listingblock pre[class="highlight"] {
     background-color: $HL-CanvasBG;
     &>code {
