Drop UTF-8 ALAN Files
Stop converting ALAN sources and transcripts to UTF-8 and directly
include the original ISO-8859-1 files in AsciiDoc sources (fixes #126).

This huge commit entirely removes from the repo all assets that dealt
with creating UTF-8 intermediate versions of the ISO-8559-1 ALAN sources
and transcripts, using instead the new (undocumented) `encoding` option
of Asciidoctor's `include::` directives, which was kindly added by
@mojavelinux on our request for the ALAN-IF projects:

- https://github.com/asciidoctor/asciidoctor/issues/3248

The build toolchain is now much faster than before.
For the full details of the changes, refer see the task list of #126.

--- a/_assets_src/sass/_common.scss
+++ b/_assets_src/sass/_common.scss
@@ -69,8 +69,8 @@ span.play,
     // -------------------------------------------------------------------------
     // The styles below target ADoc elements automatically handled by the update
     // script that processes game transcripts and detects user input and comment
-    // input lines, and styles them accordingly via sed manipulations.
-    // (found in "*.a3ADocLog" files)
+    // input lines, and styles them accordingly via SED manipulations.
+    // (found in "*.a3log" files)
     // -------------------------------------------------------------------------
     span.comment {
         // Comments in user input are styled via:  #[comment]; some text#
