--- a/_assets_src/sass/styles.css
+++ b/_assets_src/sass/styles.css
@@ -72,7 +72,7 @@ span.play em,
 .listingblock pre[class=highlight][lang] .hl.ipl {
   color: #d27b53;
 }
-.listingblock pre[class=highlight][lang] .hl.str {
+.listingblock pre[class=highlight][lang] .hl.sng {
   color: #99cc99;
 }
 .listingblock pre[class=highlight][lang] .hl.ppc {
@@ -141,7 +141,7 @@ span.play em,
 .listingblock pre[class=highlight][lang=alan] .hl.ipl {
   color: #d572f1;
 }
-.listingblock pre[class=highlight][lang=alan] .hl.str {
+.listingblock pre[class=highlight][lang=alan] .hl.sng {
   color: #008080;
 }
 .listingblock pre[class=highlight][lang=alan] .hl.slc {
@@ -198,7 +198,7 @@ span.play em,
 .listingblock.lib pre[class=highlight][lang=alan] .hl.ipl {
   color: #d27b53;
 }
-.listingblock.lib pre[class=highlight][lang=alan] .hl.str {
+.listingblock.lib pre[class=highlight][lang=alan] .hl.sng {
   color: #99cc99;
 }
 .listingblock.lib pre[class=highlight][lang=alan] .hl.slc {
@@ -255,7 +255,7 @@ span.play em,
 .listingblock.tutorial pre[class=highlight][lang=alan] .hl.ipl {
   color: #3971ED;
 }
-.listingblock.tutorial pre[class=highlight][lang=alan] .hl.str {
+.listingblock.tutorial pre[class=highlight][lang=alan] .hl.sng {
   color: #198844;
 }
 .listingblock.tutorial pre[class=highlight][lang=alan] .hl.slc {
