Adopt '.a3s' and '.a3t' Extensions
Stop using `.a3sol` and `.a3log` extensions for solutions and transcripts
and use instead the new `.a3s` and `.a3t` official extensions recently
introduced in ARun (see alan-if/alan#2).

This commit contains lots of changes:

- Rename all `*.a3sol` and `*.a3log` files to `*.a3s` and `*.a3t`
- Fix ``include::` directives in AsciiDoc sources.
- Tweak all toolchain scripts to use the new extensions.
- Tweak repository configurations.
- Fix references to old extensions in READMEs and other MD docs.

Fixes #128.

--- a/_assets_src/sass/_color-schemes.scss
+++ b/_assets_src/sass/_color-schemes.scss
@@ -37,7 +37,7 @@ $BNF-normal:     #492E11;
 // ---------------
 // Game Transcript
 // ---------------
-// Some transcript styles are added by the script that processes "*.a3log" files.
+// Some transcript styles are added by the script that processes "*.a3t" files.
 $Transcript-background: #F7FDFF;
 $Transcript-border:     #CCF2FF;
 $Transcript-normal:     #0089B6;
