--- a/_assets_src/sass/_common.scss
+++ b/_assets_src/sass/_common.scss
@@ -70,7 +70,7 @@ span.play,
     // The styles below target ADoc elements automatically handled by the update
     // script that processes game transcripts and detects user input and comment
     // input lines, and styles them accordingly via SED manipulations.
-    // (found in "*.a3log" files)
+    // (found in "*.a3t" files)
     // -------------------------------------------------------------------------
     span.comment {
         // Comments in user input are styled via:  #[comment]; some text#
